--- a/apps/background-jobs/package.json
+++ b/apps/background-jobs/package.json
@@ -18,13 +18,11 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
-    "jsonwebtoken": "^9.0.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/archiver": "^7.0.0",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.5",
-    "@types/jsonwebtoken": "^9.0.10"
+    "@types/express": "^5.0.5"
   }
 }
