--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,9 +22,11 @@
     "date-fns": "^4.1.0",
     "db": "workspace:*",
     "ioredis": "^5.8.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2"
   }
