--- a/apps/background-jobs/package.json
+++ b/apps/background-jobs/package.json
@@ -17,6 +17,7 @@
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "ioredis": "^5.4.2",
     "zod": "^4.1.12"
   },
