--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -21,6 +21,6 @@
       "@shared/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules", "dist"]
 }
